WIP: transfering more text from original & embellishing

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -26,7 +26,7 @@ In open source, developers are encouraged to share their work, and to seek out e
 
 In open data, the situation is more diverse and the steps are more inefficient.  The most coherent framework for data reuse is Linked Data [@heath2011linked; @auer2014linked].  This involves databases serving content on the Internet in RDF format [e.g., @maali2012publishing]; search and discovery is aided by some topical catalogs [e.g., @pesce2015setting].  Consumers can query and reference the content in the databases, often by creating pipelines to access, translate and process the data at the user end [e.g., @klimek2016linkedpipes].  However, Linked Data sources remain a minority today---most data sources are shared using the far simpler approach of exposing a network API that enables users to search and access content stored in databases.  The heterogeneity of the APIs and data formats in these cases complicates reuse of data and pushes complexity to individual users.
 
-Whether using Linked Data or more conventional networked databases, it is important to note that different users often end up recreating the same solutions over and over.  The pattern is that some computing system is built to consume datasets, translate the data, perform operations on the data, and then interpret the results.  Sometimes the results are stored in a _local_ (not shared) database, usually in a different format than the source format; other times, the intermediate data produced by the operations is thrown away because the processed data is either assumed to be of no value to anyone else, or else the cost of storing, managing and sharing intermediate results is assumed to be higher than simply recomputing them on demand.
+Whether using Linked Data or more conventional networked databases, it is important to note that different users often end up recreating the same solutions over and over.  The pattern is that some computing system is built to consume data sets, translate the data, perform operations on the data, and then interpret the results.  Sometimes the results are stored in a _local_ (not shared) database, usually in a different format than the source format; other times, the intermediate data produced by the operations is thrown away because the processed data is either assumed to be of no value to anyone else, or else the cost of storing, managing and sharing intermediate results is assumed to be higher than simply recomputing them on demand.
 
 The consequence is that answers to questions are often not being shared, discovered or reused by other potential users of open data.
 
@@ -48,7 +48,7 @@ From there, the natural next step is to provide programmatic access to this data
   Database -> API Encode -> Network -> API Decode
 ```
 
-This approach is flexible, and there is no question that it works---after all, it serves as the basis of many software systems.  However, this approach is the product of a long history of accumulated technical contexts, some of which are now the source of a great deal of inefficency.  Consider what happens when the results of a data service are processed by another service:
+This approach is flexible, and there is no question that it works---after all, it serves as the basis of many software systems.  However, this approach is the product of a long history of accumulated technical contexts, some of which are now the source of a great deal of inefficiency.  Consider what happens when the results of a data service are processed by another service:
 
 ```
   Database -> API Encode -> Network -> API Decode -> Process -> Database
@@ -58,33 +58,64 @@ In today's software environments, this pattern uses multiple servers to take dat
 
 In other words, not only is this architecture inefficient in its use of network and computational resources: the economics of the arrangement actively discourages sharing outputs.
 
-## Reimaging distributed open data
+## Reimagining distributed open data
 
-If it were possible to short-circuit some of the steps in the architetural pattern above, it could be made more efficient, at least for certain use cases.  For example, what if the decoding steps could be removed?  For that matter, what if the databases could be removed too, and the network itself somehow could be the database?  Then the process diagram would look like this:
+If it were possible to short-circuit some of the steps in the architectural pattern above, it could be made more efficient, at least for certain use cases.  For example, what if the decoding steps could be removed?  For that matter, what if the databases could be removed too, and the network itself somehow could be the database?  Then the process diagram would look like this:
 
 ```
   Network -> Process -> Network
 ```
 
-The idea that the network itself could be "queried for data" as if it where a database may seem ludicrous at first.  The rest of this white paper describes how this _can_ be achieved, using a combination of technologies and architectural patterns.  Renewed attention to distributed, content-addressed networks with a robust linked-data structure provides the foundation necessary for achieving this.  What follows is a plan for a suite of tools that collectively provide the necessary components to be able to query a network, with the explicit design goal of faciliting the accumulation of results through data that is held on the network.
+The idea that the network itself could be "queried for data" as if it where a database may seem ludicrous at first.  The rest of this white paper describes how this _can_ be achieved, using a combination of technologies and architectural patterns.  Renewed attention to distributed, content-addressed networks with a robust linked-data structure provides the foundation necessary for achieving this.  What follows is a plan for a suite of tools that collectively provide the necessary components to be able to query a network, with the explicit design goal of facilitating the accumulation of results through data that is held on the network.
 
 <!-- need compare this to "network is the database" -->
 
 ## Use cases and limitations
 
-The intent is not to eliminate database technologies in all situations. Rather, the goal is to reduce the need for large numbers of users to recreate identical accesses and encode/decode steps on the same data.  Assuming that most data continue to be held in databases, database accesses will still be needed for novel queries; the gains in reduced computation and network accesses will be realized when multiple distributed users or processes repeat the same queries.  The reality today is that queries to content-addressed networks are likely to be slower than queries to local databases, but those losses are expected to be offset by deduplication of data as well as resource reduction in the aggregate.  This form of deterministic querying deliberately accepts a number of performance tradoffs for the sake of repeatability and interoperability.
+The intent is not to eliminate database technologies in all situations. Rather, the goal is to reduce the need for large numbers of users to recreate identical accesses and encode/decode steps on the same data.  Assuming that most data continue to be held in databases, database accesses will still be needed for novel queries; the gains in reduced computation and network accesses will be realized when multiple distributed users or processes repeat the same queries.  The reality today is that queries to content-addressed networks are likely to be slower than queries to local databases, but those losses are expected to be offset by deduplication of data as well as resource reduction in the aggregate.  This form of deterministic querying deliberately accepts a number of performance tradeoffs for the sake of repeatability and interoperability.
 
 The approach described here will be best suited to certain use cases.  The efficacy of this technique is inversely correlated to how frequently the underlying data changes; data that is not mutated after initial insertion is ideal for this approach.  Thankfully, many data sets fall into this category, including scientific research data, government data, industrial data, and more.  We contend that the development of deterministic querying offers a way to build an open data commons to provide greater opportunity for the collective, accumulative advancement of open data.
 
-# Resources, queries, hashes and graphs
+# Resources, hashes, queries and graphs
 
+_Deterministic querying_ is designed for content-addressed network systems. In content-based addressing, data is stored and retrieved not by its location (as is done in the current Web via HTTP), but rather by a function computed over its content---specifically, a hash function that uniquely identifies the content [@aurora2007code].  This _content address_ can be computed independently by anyone for any content simply by running the hash function; they do not require a centralized authority to coordinate the assignment of labels or addresses.  This decentralized approach is the foundation of an emerging, modern, reliable data commons that deterministic querying aims to support.
 
+## Content addressing and hash discovery
 
+Content-based addressing (also known as compare-by-hash [@aurora2007code]) was first used for networked file systems in the early 2000's, and is a staple of peer-to-peer systems today.  In this work, we specifically target IPFS (the InterPlanetary File System), an open-source, distributed, content-addressed, peer-to-peer, versioned file system and protocol [@benet2014ipfs; @ipfs2017].  IPFS distributes content over a network using a secure distributed hash table [@maymounkov2002kademlia; @freedman2004democratizing; baumgart2007s].  The basic premise of IPFS (and other content-addressed file systems) is that identical content will produce identical addresses.
 
+A fundamental goal of deterministic querying is to _maximize hash discovery_ in content-addressed networks.  The goal of the techniques below is to ensure that equivalent data sets, and semantically-equivalent queries for data sets, resolve to the same hash even if created by different parties in different locations at different times.  This leads naturally to automatic discovery of existing data sets and queries, and deduplication of content on the network.  The beneficial side-effect is a savings of storage, bandwidth, and computation.
 
-## Content addressing
+To maximize hash discovery, the process of describing resources and queries must be precise and consistent.  To the greatest extent possible, content and queries that are the same must produce the same hash value; thus, resource definitions and query definitions must follow carefully-defined conventions, and alternative forms for data sets and query definitions must be limited.  We compensate for this rigidity by storing nonessential data separately, then connecting that to resources and queries using separate mechanisms for linking and discovery.
 
 ## Resource definitions
+
+This section could be called "data set definition"; we use the term "resource" to avoid the connotation that a data set is necessarily a collection of tables or single table of data.  A resource in the present context can be any static object that is precisely defined and can be addressed and referenced by a query.  We focus on widely-used formats as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
+
+To provide a concrete example as an illustration, consider some raw data stored as in comma-separated value (CSV) format.  This CSV data is a _resource_.  The beginning of a CSV data file might look something like this:
+
+```
+lat,lng,precip,datestamp,title
+60.00,-50.049303,349034,2017-02-14,precip measurement one
+60.00,-50.049303,430004,2017-02-15,precip measurement two
+...
+```
+
+Assume this data file resolves to the following hash on the network:
+
+```
+1220cb90f19d806704600e32b152afbad9fdfc91b0216e15585f9fc1044d44c72d5b
+```
+
+In order to work with this data in a deterministic way, we require a _resource definition_ to provide precise details about how to interpret the underlying data. Resource definitions form a concrete handle for working with data.  The following definition is heavily inspired by the the Open Knowledge Foundation Data Package format, with the default storage format being Javascript Object Notation (JSON). The actual definition itself attempts to establish parity with [frictionless data specifications](https://specs.frictionlessdata.io) wherever possible.
+
+... more...
+
+<!-- Put this as a final paragraph in this section 
+
+In the spirit of Open Data, it's important to adknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favour of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
+-->
+
 
 ## Query definitions
 
