--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -11,7 +11,7 @@ August 2017
 <b>Abstract</b>
 </p>
 
-The current infrastructure that underlies the distribution and processing of data over the Internet has enabled dramatic advances in a wide variety of human activities.  Recent trends promoting open data promise even greater benefits as the number and variety of networked data sets grows.  However, while current technologies and architectures obviously do work, they also show signs of systemic inefficiencies that impede effective large-scale discovery, distribution, preservation and reuse of data sets.  An important source of inefficiencies is rooted in the database-centered pipeline that underlies much of data processing on the Internet today.  The ongoing transition to a content-addressed permanent web offers an opportunity to replace certain software architecture patterns with alternatives that are more efficient and scale more effectively.  We introduce one such new pattern, _deterministic querying_, that combines formalized query definitions, formalized resource descriptions, linked metadata, hashing, and a content-addressed file system.  The result supports database-free reuse of data and data processing results---and can do so on the scale of the global Internet.
+The current infrastructure that underlies the distribution and processing of data over the Internet has enabled dramatic advances in a wide variety of human activities.  Recent trends promoting open data promise even greater benefits as the number and variety of networked data sets grows.  However, while current technologies and architectures obviously do work, they also show signs of systemic inefficiencies that impede effective large-scale discovery, distribution, preservation and reuse of data sets.  An important source of inefficiencies is rooted in the database-centered pipeline that underlies much of data processing on the Internet today.  The ongoing transition to a content-addressed permanent web offers an opportunity to replace certain software architecture patterns with alternatives that are more efficient and scale more effectively.  We introduce one such new pattern, _deterministic querying_, that combines formalized query definitions, formalized data descriptions, linked metadata, hashing, and a content-addressed file system.  The result supports database-free reuse of data and data processing results---and can do so on the scale of the global Internet.
 
 
 # Introduction
@@ -72,27 +72,32 @@ The idea that the network itself could be "queried for data" as if it where a da
 
 ## Use cases and limitations
 
-The intent is not to eliminate database technologies in all situations. Rather, the goal is to reduce the need for large numbers of users to recreate identical accesses and encode/decode steps on the same data.  Assuming that most data continue to be held in databases, database accesses will still be needed for novel queries; the gains in reduced computation and network accesses will be realized when multiple distributed users or processes repeat the same queries.  The reality today is that queries to content-addressed networks are likely to be slower than queries to local databases, but those losses are expected to be offset by deduplication of data as well as resource reduction in the aggregate.  This form of deterministic querying deliberately accepts a number of performance tradeoffs for the sake of repeatability and interoperability.
+The intent is not to eliminate database technologies in all situations. Rather, the goal is to reduce the need for large numbers of users to recreate identical accesses and encode/decode steps on the same data.  Assuming that most data continue to be held in databases, database accesses will still be needed for novel queries; the gains in reduced computation and network accesses will be realized when multiple distributed users or processes repeat the same queries.  The reality today is that queries to content-addressed networks are likely to be slower than queries to local databases, but those losses are expected to be offset by deduplication of data as well as resource use reduction in the aggregate.  This form of deterministic querying deliberately accepts a number of performance tradeoffs for the sake of repeatability and interoperability.
 
 The approach described here will be best suited to certain use cases.  The efficacy of this technique is inversely correlated to how frequently the underlying data changes; data that is not mutated after initial insertion is ideal for this approach.  Thankfully, many data sets fall into this category, including scientific research data, government data, industrial data, and more.  We contend that the development of deterministic querying offers a way to build an open data commons to provide greater opportunity for the collective, accumulative advancement of open data.
 
-# Resources, hashes, queries and graphs
+# Data, hashes, queries and graphs
 
 _Deterministic querying_ is designed for content-addressed network systems. In content-based addressing, data is stored and retrieved not by its location (as is done in the current Web via HTTP), but rather by a function computed over its content---specifically, a hash function that uniquely identifies the content [@aurora2007code].  This _content address_ can be computed independently by anyone for any content simply by running the hash function; they do not require a centralized authority to coordinate the assignment of labels or addresses.  This decentralized approach is the foundation of an emerging, modern, reliable data commons that deterministic querying aims to support.
 
-## Content addressing and hash discovery
+Content-based addressing, also known as compare-by-hash [@aurora2007code], was first used for networked file systems in the early 2000's [@muthitacharoen2001low; @tolia2003opportunistic], and is a staple of peer-to-peer systems today.  In this work, we specifically target IPFS (the InterPlanetary File System), an open-source, distributed, content-addressed, peer-to-peer, versioned file system and protocol [@benet2014ipfs; @ipfs2017].  IPFS distributes content over a network using a secure distributed hash table [@maymounkov2002kademlia; @freedman2004democratizing; @baumgart2007s].  The basic premise of IPFS and other content-addressed file systems is that identical content will produce identical hash values, and thus be identified uniquely.
 
-Content-based addressing (also known as compare-by-hash [@aurora2007code]) was first used for networked file systems in the early 2000's, and is a staple of peer-to-peer systems today.  In this work, we specifically target IPFS (the InterPlanetary File System), an open-source, distributed, content-addressed, peer-to-peer, versioned file system and protocol [@benet2014ipfs; @ipfs2017].  IPFS distributes content over a network using a secure distributed hash table [@maymounkov2002kademlia; @freedman2004democratizing; baumgart2007s].  The basic premise of IPFS (and other content-addressed file systems) is that identical content will produce identical addresses.
+A fundamental goal of deterministic querying is to _maximize hash discovery_ in content-addressed networks.  The techniques below are aimed to ensure that equivalent data sets, as well as semantically-equivalent queries for data sets, each resolve to the same hash even if created by different parties in different locations at different times.  This consequently leads naturally to automatic discovery of existing data sets and queries, and deduplication of content on the network.
 
-A fundamental goal of deterministic querying is to _maximize hash discovery_ in content-addressed networks.  The goal of the techniques below is to ensure that equivalent data sets, and semantically-equivalent queries for data sets, resolve to the same hash even if created by different parties in different locations at different times.  This leads naturally to automatic discovery of existing data sets and queries, and deduplication of content on the network.  The beneficial side-effect is a savings of storage, bandwidth, and computation.
+To maximize hash discovery, the process of describing data sets and queries must be made precise and consistent.  To the greatest extent possible, content and queries that are the same must produce the same hash value; thus, definitions of data resources and queries must follow carefully-defined conventions, and alternative forms must be limited.  We compensate for this rigidity by storing nonessential data separately, then connecting that to data sets and queries using separate mechanisms for linking and discovery.  This leads to the four building blocks of deterministic querying: `Data`, `Dataset`, `Structure`, and `Query`.
 
-To maximize hash discovery, the process of describing resources and queries must be precise and consistent.  To the greatest extent possible, content and queries that are the same must produce the same hash value; thus, resource definitions and query definitions must follow carefully-defined conventions, and alternative forms for data sets and query definitions must be limited.  We compensate for this rigidity by storing nonessential data separately, then connecting that to resources and queries using separate mechanisms for linking and discovery.
+<p align="center">
+<img src="graphics/data-dataset-structure-query.png">
+</p>
 
-## Resource definitions
+## `Data` and `Dataset`
 
-This section could be called "data set definition"; we use the term "resource" to avoid the connotation that a data set is necessarily a collection of tables or single table of data.  A resource in the present context can be any static object that is precisely defined and can be addressed and referenced by a query.  We focus on widely-used formats as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
+<!--
+This section could be called "schemas" or even "resources"; we avoid these terms because they are overused and may evoke unwanted associations.
+-->
 
-To provide a concrete example as an illustration, consider some raw data stored as in comma-separated value (CSV) format.  This CSV data is a _resource_.  The beginning of a CSV data file might look something like this:
+In the context of deterministic querying, `Data` has its natural meaning: a collection of raw values of _something_---numerical values, qualitative values, anything---organized in some systematic way.  An example file format for storing data today is the venerable comma-separated values (CSV) format, which consists of rows of numerical or text values separated by commas, with an optional first line containing column headings.  Here is an example:
+
 
 ```
 lat,lng,precip,datestamp,title
@@ -101,25 +106,36 @@ lat,lng,precip,datestamp,title
 ...
 ```
 
-Assume this data file resolves to the following hash on the network:
+A `Data` object in a content-addressed file system will be a static object identified by a hash value (henceforth, to be called simply its _hash_).  Assume that this data file resolves to the following hash on the network:
 
 ```
 1220cb90f19d806704600e32b152afbad9fdfc91b0216e15585f9fc1044d44c72d5b
 ```
 
-In order to work with this data in a deterministic way, we require a _resource definition_ to provide precise details about how to interpret the underlying data. Resource definitions form a concrete handle for working with data.  The following definition is heavily inspired by the the Open Knowledge Foundation Data Package format, with the default storage format being Javascript Object Notation (JSON). The actual definition itself attempts to establish parity with [frictionless data specifications](https://specs.frictionlessdata.io) wherever possible.
+As discussed above, this hash will be unique: any file whose computed hash matches the one above _will contain the same content_, no matter how or where it was created (assuming we use the same conventions for line endings, spaces and some other details), or where it's physically located in the content-addressed file system.  We focus on widely-used formats such as CSV as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
 
-... more...
+Being able to interpret a given `Data` object requires additional information outside of the `Data` itself.  This metadata is needed to provide precise details about how to interpret the content of a `Data` object.  That is the purpose of `Dataset`.
 
-<!-- Put this as a final paragraph in this section 
+
+
+
+
+## `Structure`
+
+
+
+## `Query`
+
+
+
+## Query execution
+
+<!--
+
+Put this as a final paragraph in this section 
 
 In the spirit of Open Data, it's important to adknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favour of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
 -->
-
-
-## Query definitions
-
-## Query execution
 
 # Distributed queries and linked data
 
