WIP quick correction to an obvious mistake

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -90,7 +90,7 @@ To maximize hash discovery, the process of describing data sets and queries must
 <img src="graphics/data-dataset-structure-query.png">
 </p>
 
-## `Data` and `Dataset`
+## `Data` and `Structure`
 
 <!--
 This section could be called "schemas" or even "resources"; we avoid these terms because they are overused and may evoke unwanted associations.
@@ -114,7 +114,7 @@ A `Data` object in a content-addressed file system will be a static object ident
 
 As discussed above, this hash will be unique: any file whose computed hash matches the one above _will contain the same content_, no matter how or where it was created (assuming we use the same conventions for line endings, spaces and some other details), or where it's physically located in the content-addressed file system.  We focus on widely-used formats such as CSV as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
 
-Being able to interpret a given `Data` object requires additional information outside of the `Data` itself.  This metadata is needed to provide precise details about how to interpret the content of a `Data` object.  That is the purpose of `Dataset`.
+Being able to interpret a given `Data` object requires additional information outside of the `Data` itself.  This information is needed to provide precise details about how to interpret the content of a `Data` object.  That is the purpose of `Structure`.
 
 
 
@@ -131,6 +131,8 @@ Being able to interpret a given `Data` object requires additional information ou
 ## Query execution
 
 <!--
+
+structure/previous
 
 Put this as a final paragraph in this section 
 
