WIP finished 1st pass at Data, Dataset and Structure

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -112,15 +112,79 @@ A `Data` object in a content-addressed file system will be a static object ident
 1220cb90f19d806704600e32b152afbad9fdfc91b0216e15585f9fc1044d44c72d5b
 ```
 
-As discussed above, this hash will be unique: any file whose computed hash matches the one above _will contain the same content_, no matter how or where it was created (assuming we use the same conventions for line endings, spaces and some other details), or where it's physically located in the content-addressed file system.  We focus on widely-used formats such as CSV as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
+As discussed above, this hash will be unique: any file whose computed hash matches the one above _will contain the same content_, no matter how or where it was created (assuming we use the same conventions for line endings, spaces and some other details), or where it's physically located in the content-addressed file system.  Queries to this data file will always run against the same set of bytes because the hash is _deterministic_.
 
-Being able to interpret a given `Data` object requires additional information outside of the `Data` itself.  This information is needed to provide precise details about how to interpret the content of a `Data` object.  That is the purpose of `Structure`.
-
-
+Being able to interpret the bytes in a given `Data` object requires additional information outside of the `Data` itself.  This information is needed to provide precise details about how to interpret the content of a `Data` object.  That is the purpose of `Structure`.  It contains fields that indicate such things as the format of a `Data` object, the character encoding, compression settings, and other details.  Here is an example shown in a human-readable JSON format:
 
 
+```json
+{
+  "format" : "text/csv",
+  "formatConfig" : {
+    "delimiter": ",",
+    "doubleQuote": true,
+    "lineTerminator": "\r\n",
+    "quoteChar": "\"",
+    "skipInitialSpace": true,
+    "header": true
+  },
+  "encoding" : "utf-8",
+  "compression" : "gzip",
+  "schema" : {
+    "fields" : [
+      { "title" : "col_0", "type" : "float", "default" : 0 },
+      { "title" : "col_1", "type" : "float", "default" : 0 },
+      { "title" : "col_2", "type" : "float", "default" : 0 },
+      { "title" : "col_3", "type" : "datestamp", "default" : 0 },
+      { "title" : "col_4", "type": "string", "default": "" }
+    ]
+  },
+}
+```
 
-## `Structure`
+The specification of `Structure` is given elsewhere, but as the example illustrates, it contains information that enables software and users to read the content of a `Data` object.  For example, `format` specifies how the data is stored; the field value is a MIME type value (e.g., `"text/csv"` for CSV [@shafranovich2005common]).  The related field `formatConfig` removes as much ambiguity as possible about how to interpret the specified `format` because some formats have a number of dialects, and variants need to be identified exactly.
+
+The field `schema` merits some additional explanation.  Many formats such as CSV do not internally define the data types of values and have no standard way of communicating this information, which forces the requirement to define an approach for externalizing it outside of a `Data` file.  It turns out, however, that describing the format explicitly in a generalized way makes it possible to store and reuse those descriptions independently: they become another object in the content-addressed storage space, hashed and stored like everything else.
+
+In fact, `Structure` is abstracted in such a way that it contains nothing about _meaning_.  If the values of a `Data` file change, the `Structure` can remain the same; if multiple `Data` objects anywhere on an IPFS network all have the same structure, the `Structure` object can remain the same.  _This is true even if the `Data` objects are about entirely different things_.  As will become more clear below, this is part of the fundamental insight that makes deterministic querying possible.
+
+<!--
+Finally, it is worth noting that we focus on widely-used formats such as CSV as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
+-->
+
+## `Dataset`
+
+A `Structure` describes the form of a `Data` object.  The two are connected together, along with metadata about the `Data`, in a `Dataset` object.
+
+<p align="center">
+<img src="graphics/dataset.png">
+</p>
+
+As illustrated above, a `Dataset` references one `Data` and one `Structure` object, and it also adds additional descriptive metadata.  A `Dataset` must resolve to one and only one `Data` entity; this is accomplished by using the unique hashes of the associated `Data` and `Structure` objects.  This separation of concerns achieves two important goals:
+
+1. The same data can be described by different metadata.  For example, a repeated experiment may produce identical data, but it should be described differently if only to indicate different time stamps or conditions.  Separating the description from the values saves storage and bandwidth because only the changes (the metadata) are stored separately.
+
+2. Metadata formats can be changed and updated independently.  In many cases, data remains static after it is gathered.  Software frameworks, however, often change rapidly, and developers and users find needs to change and update metadata about data.  With this separation, metadata can be changed without changing the underlying data.
+
+To retain a trail of changes, `Dataset` contains a field called `previous` that references the hash of another `Dataset` object.  This establishes a clear history of changes to any component of a data set, whether this is the metadata, or the `Data`, or the `Structure`.  For example, when changes are made to metadata without changing the `Data` or its `Structure`, only the `Dataset` object needs to change:
+
+<p align="center">
+<img src="graphics/metadata-changes.png">
+</p>
+
+Conversely, if the `Data` changes but the `Structure` does not, the new `Dataset` object will also reference the hash of the new `Data` object:
+
+<p align="center">
+<img src="graphics/data-changes.png">
+</p>
+
+Finally, if the `Structure` changes, the `Data` necessarily changes as well:
+
+<p align="center">
+<img src="graphics/structure-changes.png">
+</p>
+
+In each case, the `Dataset` identifies the unique `Structure` object that defines the format of the data in the `Data` object(s), and the value of the `previous` has points to any previous `Dataset` definition that may have come before.
 
 
 
@@ -136,7 +200,7 @@ structure/previous
 
 Put this as a final paragraph in this section 
 
-In the spirit of Open Data, it's important to adknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favour of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
+In the spirit of Open Data, it's important to acknowledge and support uses outside of these techniques.  Storing data in common formats reduces friction, allowing data to flow freely between ecosystems.  It is my view that the performance penalties incurred by storing data in common formats are worth paying in favor of interoperability.  Some of these performance penalties can be compensated for through sidecar lookup tables, which represent a future area of research.
 -->
 
 # Distributed queries and linked data
